[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "Weather data MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
weather-mcp-server = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
